--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : &name "Gabriel G. Monteiro"
 description              : &description "personal description"
 url                      : https://guto-monteiro.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "guto-monteiro.github.io/academic-guto.github.io/"
+repository               : "guto-monteiro/academic-guto.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
