--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "profile_new.jpeg"
+  name             : "Gabriel Gustavo Monteiro"
   pronouns         : "He/Him"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Molecular biogeochemistry and microbial ecology"
   location         : "Piracicaba-SP"
   employer         : "Center for Nuclear Energy in Agriculture"
   uri              : # URL
