--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,20 +8,23 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Conferences"
+    url: /conferences/ 
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
     url: /cv/
+
+  - title: "Projects"
+    url: /projects/ 
     
-  - title: "Guide"
-    url: /markdown/
+ # - title: "Teaching"
+ #   url: /teaching/    
+    
+ # - title: "Portfolio"
+ #   url: /portfolio/
+        
+ # - title: "Blog Posts"
+ #   url: /year-archive/
+    
+ # - title: "Guide"
+ #   url: /markdown/
