--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "guto-monteiro/guto-monteiro.github.io"
 author:
   # Biographic information
   avatar           : "profile_new.jpeg"
-  name             : "Gabriel Gustavo Monteiro"
+  name             : "Gabriel G. Monteiro"
   pronouns         : "He/Him"  
   bio              : "Molecular biogeochemistry and microbial ecology"
   location         : "Piracicaba-SP"
