--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Gabriel's Homepage"
 title_separator          : "-"
 name                     : &name "Gabriel G. Monteiro"
 description              : &description "personal description"
-url                      : https://guto-monteiro.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://guto-monteiro.com # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "guto-monteiro/guto-monteiro.github.io"
 
