--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,17 +14,17 @@ main:
   - title: "CV"
     url: /cv/
 
-  - title: "Projects"
-    url: /projects/ 
+ # - title: "Projects"
+ #   url: /projects/ 
     
  # - title: "Teaching"
  #   url: /teaching/    
     
- # - title: "Portfolio"
- #   url: /portfolio/
+  - title: "Projects"
+    url: /portfolio/
         
- # - title: "Blog Posts"
- #   url: /year-archive/
+  - title: "Blog Posts"
+    url: /year-archive/
     
  # - title: "Guide"
  #   url: /markdown/
