--- a/_config.yml
+++ b/_config.yml
@@ -276,9 +276,9 @@ defaults:
   # _talks
   - scope:
       path: ""
-      type: talks
+      type: conferences
     values:
-      layout: talk
+      layout: conferences
       author_profile: true
       share: true
 
