--- a/_config.yml
+++ b/_config.yml
@@ -278,7 +278,7 @@ defaults:
       path: ""
       type: conferences
     values:
-      layout: conferences
+      layout: single
       author_profile: true
       share: true
 
