--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,8 +20,8 @@ main:
  # - title: "Teaching"
  #   url: /teaching/    
     
-  - title: "Projects"
-    url: /portfolio/
+ # - title: "Projects"
+ #   url: /portfolio/
         
   - title: "News"
     url: /news/
